--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,47 +1,79 @@
-<h2>Sign up</h2>
+<!------------------------------------------  Panel banner--------------------------->
+<nav class="navegador">
+  <div class="row">
+    <div class="col-md-9">
+    </div><!--fin col1-->
 
+    <div class="col-md-3">
+      <ul class="masthead-nav">
+        <li><a><%= link_to "Home", root_path%></a></li>
+        <li class="active"><a><%= link_to "Registrese ", new_user_registration_path %></a></li>
+      </ul>
+    </div><!--fin col2-->
+    <svg style="position:relative; top:5px;" width="100%" height="100" viewBox="0 0 100 100" preserveAspectRatio="none">
+      <path d="M0 100 C 20 0 50 0 100 100 Z" fill="#DDDDDD" />
+    </svg>
+  </div><!--fin row navegador-->
+</nav>
+
+
+
+
+<div class="container">
+  <!------------------------------------------  Panel banner--------------------------->
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
-<p><%= f.label :name %><br />
-<%= f.text_field :name %></p>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email %></div>
+   <div class="row">
+     <div class="col-md-4">
+       <p>Informacíon personal</p>
+            <p><%= f.label :name %><br />
+            <%= f.text_field :name %></p>
 
-  <p>Información personal</p>
-    <div><%= f.label :empresa %><br />
-    <%= f.file_field :empresa %></div>
+           <div><%= f.label :telefono %><br />
+           <%= f.text_field :telefono %></div>
 
-    <div><%= f.label :direccion_casa %><br />
-    <%= f.file_field :direccion_casa %></div>
+           <div><%= f.label :movil %><br />
+           <%= f.text_field :movil %></div>
 
-    <div><%= f.label :direccion_trabajo %><br />
-    <%= f.file_field :direccion_trabajo %></div>
+           <div><%= f.label :fecha_nacimiento %><br />
+           <%= f.date_select :fecha_nacimiento %></div>
+     </div>
 
-    <div><%= f.label :comunidad %><br />
-    <%= f.file_field :comunidad %></div>
+     <div class="col-md-4">
+       <p>Datos de Interes</p>
+           <div><%= f.label :empresa %><br />
+           <%= f.text_field :empresa %></div>
 
-    <div><%= f.label :pais %><br />
-    <%= f.file_field :pais %></div>
+           <div><%= f.label :direccion_casa %><br />
+           <%= f.text_field :direccion_casa %></div>
 
-    <div><%= f.label :telefono %><br />
-    <%= f.file_field :telefono %></div>
+           <div><%= f.label :direccion_trabajo %><br />
+           <%= f.text_field :direccion_trabajo %></div>
 
-    <div><%= f.label :movil %><br />
-    <%= f.file_field :movil %></div>
+           <div><%= f.label :comunidad %><br />
+           <%= f.text_field :comunidad %></div>
 
-    <div><%= f.label :fecha_nacimiento %><br />
-    <%= f.date_select :fecha_nacimiento %></div>
+           <div><%= f.label :pais %><br />
+           <%= f.text_field :pais %></div>
+     </div>
 
+     <div class="col-md-4">
+       <p>Acceso</p>
+            <div><%= f.label :email %><br />
+            <%= f.email_field :email %></div>
 
- <p>Introduce contraseñas</p>
-  <div><%= f.label :password %><br />
-  <%= f.password_field :password %></div>
+            <div><%= f.label :password %><br />
+            <%= f.password_field :password %></div>
 
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
+            <div><%= f.label :password_confirmation %><br />
+            <%= f.password_field :password_confirmation %></div>
+     </div>
+   </div>
 
   <div><%= f.submit "Sign up" %></div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+
+</div>
